--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ section video{
     height: 100%;
     background: linear-gradient(to left, #FC466B, #3F5EFB);
     mix-blend-mode: overlay;
+    opacity: 0.6;
 }
 
 
